force-app/main/default/objects/SVMXA360__EntitledServiceHistory__c/SVMXA360__EntitledServiceHistory__c.object-meta.xml
<CustomObject>
    <description>Stores the entitled service usage information history of Cases and Work Orders.</description>
    <label>Entitled Service History</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Entitled Service History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entitled Service Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>