force-app/main/default/objects/SVMXA360__EntitledServiceHistory__c/fields/SVMXA360__Action__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Action__c</fullName>
    <description>Indicates the action of entitled service usage.</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Increment</fullName>
            </value>
            <value>
                <fullName>Decrement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>