force-app/main/default/objects/SVMXA360__EntitledServiceHistory__c/fields/SVMXA360__CaseId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the Case record on which the Entitled Service is used.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Entitled Service Histories</relationshipLabel>
    <relationshipName>Entitled_Service_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>