force-app/main/default/objects/SVMXA360__EntitledServiceHistory__c/fields/SVMXA360__EntitledServiceId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitledServiceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the Entitled Service after performing an entitlement check.</description>
    <label>Entitled Service</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Entitled Service Histories</relationshipLabel>
    <relationshipName>Entitled_Service_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>