force-app/main/default/objects/SVMXA360__EntitledServiceHistory__c/fields/SVMXA360__EntitlementVerificationHistoryId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitlementVerificationHistoryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the associated Entitlement Verification History.</description>
    <label>Entitlement Verification History</label>
    <referenceTo>SVMXA360__EntitlementVerificationHistory__c</referenceTo>
    <relationshipLabel>Entitled Service Histories</relationshipLabel>
    <relationshipName>Entitled_Service_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>