force-app/main/default/objects/SVMXA360__EntitledServiceHistory__c/fields/SVMXA360__Method__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Method__c</fullName>
    <description>Indicates the method of entitled service.</description>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto Entitlement</fullName>
            </value>
            <value>
                <fullName>Interactive Entitlement</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>