force-app/main/default/objects/SVMXA360__EntitledServiceHistory__c/fields/SVMXA360__ReturnOrderId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ReturnOrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the Return Order record on which Entitled Service is used.</description>
    <label>Return Order</label>
    <referenceTo>ReturnOrder</referenceTo>
    <relationshipLabel>Entitled Service Histories</relationshipLabel>
    <relationshipName>Entitled_Service_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>