force-app/main/default/objects/SVMXA360__EntitledServiceHistory__c/fields/SVMXA360__ServiceCount__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ServiceCount__c</fullName>
    <description>The consumed entitlement service.</description>
    <label>Service Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>