force-app/main/default/objects/SVMXA360__EntitledServiceHistory__c/fields/SVMXA360__WorkOrderId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__WorkOrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the Work Order record on which the Entitled Service is used.</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Entitled Service Histories</relationshipLabel>
    <relationshipName>Entitled_Service_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>